--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <title>Extension</title>
   </head>
   <body>
-    <h1>Hello world!</h1>
+    <h1>Lost & Found Tracker</h1>
+    <button id="AddItemButton">Add Lost Item</button>
+    <button id="ViewItemButton">View Found Items</button>
+    <button id="SearchItemButton">Search for an Item</button>
+    <button id="ReportItemButton">Report Found Item</button>
     <script src="main.js"></script>
   </body>
 </html>
