added subpages for each functionality

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Extension</title>
+    <title>Lost and Found Extension</title>
   </head>
   <body>
     <h1>Lost & Found Tracker</h1>
     <button id="AddItemButton">Add Lost Item</button>
     <button id="ViewItemButton">View Found Items</button>
     <button id="SearchItemButton">Search for an Item</button>
-    <button id="ReportItemButton">Report Found Item</button>
-    <script src="main.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
