--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <title>Lost and Found Extension</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Lost & Found Tracker</h1>
-    <button id="AddItemButton">Add Lost Item</button>
-    <button id="ViewItemButton">View Found Items</button>
-    <button id="SearchItemButton">Search for an Item</button>
+    <button class="button" id="AddItemButton">Add Lost Item</button>
+    <button class="button" id="ViewItemButton">View Found Items</button>
+    <button class="button" id="SearchItemButton">Search for an Item</button>
     <script src="scripts/main.js"></script>
   </body>
 </html>
