--- a/pages/view_item.html
+++ b/pages/view_item.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>View Item</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>View Lost Item</h1>
