--- a/pages/add_item.html
+++ b/pages/add_item.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Add a Lost Item</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Report a Lost Item</h1>
