--- a/pages/search_item.html
+++ b/pages/search_item.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Search Items</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Find Your Lost Item</h1>
