feedback and credits

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   </head>
   <body>
     <h1>Lost & Found Tracker</h1>
+    <p>Created by: Ojas, Rishav, Neel, Vincent, Darsh, Ravi</p>
     <button class="button" id="AddItemButton">Add Lost Item</button>
     <button class="button" id="ViewItemButton">View Found Items</button>
     <button class="button" id="SearchItemButton">Search for an Item</button>
+    <button class="button" id="FeedbackButton">Give Feedback</button>
     <script src="scripts/main.js"></script>
   </body>
 </html>
