added high functionality buttons

--- a/pages/view_item.html
+++ b/pages/view_item.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <select>
+      <option>Shirt</option>
+      <option>Water Bottle</option>
+      <option>Hoodie</option>
+      <option>Pants</option>
+    </select>
+    <input>Enter Clothing Description</input>  <!-- future AI feature -->
+    <button>Find Specific Item</button>
     <h1>View Lost Item</h1>
   </body>
 </html>
